# libratbag

./: .gitignore  circle.yml  configure.ac  meson.build
hwdb/: 70-libratbag-mouse.hwdb
ratbagd/: ratbagd-profile.c  ratbagd-resolution.c  ratbagd.c
src/: driver-etekcity.c  driver-hidpp20.c  driver-roccat.c  driver-test.c  hidpp-generic.c  hidpp.i  hidpp10.c  hidpp10.h  hidpp20.c  hidpp20.h  libratbag-hidraw.c  libratbag-hidraw.h  libratbag-private.h  libratbag.c  libratbag.h  libratbag.sym
tools/: Makefile.am  hidpp20-dump-page.c  hidpp20-reset.c  ratbag-gui.c  ratbagctl.in  ratbagctl.test.in  ratbagd.py
